<resources>
    <string name="app_name">Fittrack</string>
    <string name="default_web_client_id">110700243776-9lf0mudn95a9b402c4bghmnf662kgfai.apps.googleusercontent.com</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="btn_back">Atrás</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_edit">Editar</string>
    <string name="tv_search">Buscar</string>
    <string name="tv_next">Siguiente</string>
    <string name="btn_eliminate">Eliminar</string>
    <string name="tv_description">Descripción</string>
    <string name="btn_ok">OK</string>

    <!--    Login-->
    <string name="login_complete_fields">Debes de rellar todos los campos</string>
    <string name="login_check_email">Revisa tu correo para restablecer tu contraseña</string>
    <string name="login_email_field">Debes de rellar el campo con tu correo</string>
    <string name="login_google_failure">Error autenticando con Google</string>
    <string name="login_email_adress">Correo electrónico</string>
    <string name="login_username">Nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_signIn">Iniciar sesión</string>
    <string name="login_signUp">Registrar cuenta</string>
    <string name="login_forgottten_password">¿Olvidaste tu contraseña?</string>
    <string name="login_create_account">Crear cuenta</string>

    <!--    HomeFragment-->
    <string name="home_training">Entrenamiento</string>
    <string name="home_sub_training">¡Empieza a registrar tus entrenamientos!</string>
    <string name="home_weight">Peso corporal</string>
    <string name="home_sub_weight">Peso corporal</string>
    <string name="home_trac">Trac</string>
    <string name="home_sub_trac">¡Comienza a hacer autoevaluaciones!</string>
    <string name="home_user_name">Hola, %1$s</string>
    <string name="home_sub_trac_push">Empuje:  %1$d/5</string>
    <string name="home_sub_trac_pull">Tracción:  %1$d/5</string>
    <string name="home_sub_trac_leg">Pierna:  %1$d/5</string>
    <string name="home_sub_trac_mental">%1$d/20</string>
    <string name="home_notes">Nota</string>
    <string name="home_sub_notes">Empieza a poner notas en el calendario!</string>
    <string name="home_sub_add_notes">Añade una nota</string>
    <string name="home_sub_add_weight">Hoy: </string>
    <string name="home_sub_add_weightText">Añade tu peso corporal</string>
    <string name="home_routine_title">Entranamiento</string>

    <!--    Calendar Fragment-->
    <string name="calendar_menuOption1">Añadir nota</string>
    <string name="calendar_menuOption2">Añadir peso corporal</string>
    <string name="calendar_menuOption3">Añadir trac</string>


    <!--    Trac Dialog-->
    <string name="home_trac_selection">--Seleciona--</string>
    <string name="home_trac_afterDay">DESPUÉS DE UN DÍA DE ENTRENAMINETO</string>
    <string name="home_trac_save">Añadir Trac</string>
    <string name="home_trac_delete">Elimar trac</string>
    <string name="home_notes_delete">Elimnar nota</string>
    <string name="home_weight_delete">Eliminar peso corporal</string>

    <string name="home_trac_leg">Fatifa de pierna:</string>
    <string name="home_trac_leg_option1">Fatiga muy severa</string>
    <string name="home_trac_leg_option2">Fatiga severa</string>
    <string name="home_trac_leg_option3">Fatiga moderada</string>
    <string name="home_trac_leg_option4">Fatiga leve</string>
    <string name="home_trac_leg_option5">Sin fatiga</string>

    <string name="home_trac_push">Fatiga de empuje:</string>
    <string name="home_trac_push_option1">Fatiga muy severa</string>
    <string name="home_trac_push_option2">Fatiga severa</string>
    <string name="home_trac_push_option3">Fatiga moderada</string>
    <string name="home_trac_push_option4">Fatiga leve</string>
    <string name="home_trac_push_option5">Sin fatiga</string>

    <string name="home_trac_pull">Fatiga de tracción:</string>
    <string name="home_trac_pull_option1">Fatiga muy severa</string>
    <string name="home_trac_pull_option2">Fatiga severa</string>
    <string name="home_trac_pull_option3">Fatiga moderada</string>
    <string name="home_trac_pull_option4">Fatiga leve</string>
    <string name="home_trac_pull_option5">Sin fatiga</string>

    <string name="home_trac_food">Descanso/Alimentación:</string>
    <string name="home_trac_food_option1">Muy pobre</string>
    <string name="home_trac_food_option2">Pobre</string>
    <string name="home_trac_food_option3">Aceptable</string>
    <string name="home_trac_food_option4">Buena</string>
    <string name="home_trac_food_option5">Excelente</string>

    <string name="home_trac_rest">Recuperación percibida:</string>
    <string name="home_trac_rest_option1">Muy mala</string>
    <string name="home_trac_rest_option2">Mala</string>
    <string name="home_trac_rest_option3">Regular</string>
    <string name="home_trac_rest_option4">Buena</string>
    <string name="home_trac_rest_option5">Excelente</string>

    <string name="home_trac_motivation">Motivación:</string>
    <string name="home_trac_motivation_option1">Muy baja</string>
    <string name="home_trac_motivation_option2">Baja</string>
    <string name="home_trac_motivation_option3">Media</string>
    <string name="home_trac_motivation_option4">Alta</string>
    <string name="home_trac_motivation_option5">Muy alta</string>

    <string name="home_trac_technic">Comodidad técnica:</string>
    <string name="home_trac_technic_option1">Muy incómodo</string>
    <string name="home_trac_technic_option2">Incómodo</string>
    <string name="home_trac_technic_option3">Neutral</string>
    <string name="home_trac_technic_option4">Cómodo</string>
    <string name="home_trac_technic_option5">Muy cómodo</string>

    <!--    SettingsFragment-->
    <string name="settings_home">Home</string>
    <string name="settings_configuration">Configuración</string>
    <string name="settings_unit_weight">Unidad de peso corporal</string>
    <string name="settings_unit_exercise">Unidad de peso ejercicios</string>
    <string name="settings_theme">Tema</string>
    <string name="settings_language">Idioma</string>
    <string name="settings_language_selection1">Español</string>
    <string name="settings_language_selection2">Ingles</string>
    <string name="settings_close_session_title">CERRAR SESIÓN</string>
    <string name="settings_close_session_text">¿Estás seguro/a de que deseas cerrar sesión?</string>
    <string name="settings_close_session_close">Cerrar sesión</string>


    <!--    RoutineFragment-->
    <string name="routine_prueba">EStoy en Rutina</string>
    <string name="routine_not_exercises">Sin Ejercicios</string>
    <string name="routine_not_exercises_text">Presiona "+" para crear ejercicios</string>
    <string name="routine_count_exercise">%1$d Series</string>
    <string name="routine_menuOption1">Ver información</string>
    <string name="routine_menuOption2">Eliminar</string>

    <!--DetailsFRagment-->
    <string name="detail_menuOption1">Ver información</string>
    <string name="detail_menuOption2">Eliminar última serie</string>

    <!--    WeekFragment-->
    <string name="week_prueba">EStoy en WEEK</string>
    <string name="week_title">Título</string>
    <string name="week_calendar">Añadir al calendario</string>
    <string name="week_edit">Editar</string>
    <string name="week_addRoutine_title">Crea un nuevo entrenamiento</string>
    <string name="week_addRoutine_name">Día %1$d </string>
    <string name="week_saveRoutine">Guardar</string>
    <string name="week_all">Copiar semana completa</string>
    <string name="week_objective">Copiar semana al objetivo</string>
    <string name="week_all_exercise">Copiar ejercicios</string>
    <string name="week_dialog_delete_title">Eliminar rutina</string>
    <string name="week_dialog_delete_text">¿Estás seguro de que deseas eliminar "'%1$s'"?</string>
    <string name="week_date_routine">Sin fecha</string>
    <string name="week_not_routines">Sin Entrenamientos</string>
    <string name="week_not_routines_text">Presiona "+" para crear un entrenamiento</string>


    <!--    ExerciseFragment-->
    <string name="exercise_name">NOMBRE EJERCICIO</string>
    <string name="exercise_rpe">RPE</string>
    <string name="exercise_weight">PESO</string>
    <string name="exercise_reps">REPS</string>
    <string name="exercise_estadisticas">Estadísticas</string>
    <string name="exercise_e1rm">E1RM:</string>
    <string name="exercise_tonelaje">Tonelaje:</string>
    <string name="exercise_notas">Notas</string>
    <string name="exercise_notas_del_ejercicio">Notas del ejercicio</string>

    <!--    ExerciseCategories-->
    <string name="exerciseKnee">Dominante de Rodilla</string>
    <string name="exerciseHip">Dominante de Cadera</string>
    <string name="exercisePushHorizontal">Empuje Horizontal</string>
    <string name="exercisePushVertical">Empuje Vertical</string>
    <string name="exercisePullHorizontal">Tracción Horizontal</string>
    <string name="exercisePullVertical">Tracción Vertical</string>
    <string name="exerciseweightlifting">Halterofilia</string>
    <string name="exerciseOthers">Otros</string>

    <!--    TrainingFragment-->
    <string name="training_new_block">Crea un nuevo bloque</string>
    <string name="training_block">Bloques</string>
    <string name="training_numDays">%1$d Días </string>
    <string name="training_numWeeks">%1$d Semanas</string>
    <string name="training_menuOption1">Cambiar nombre</string>
    <string name="training_menuOption2">Copiar</string>
    <string name="training_menuOption3">Compartir</string>
    <string name="training_menuOption4">Eliminar</string>
    <string name="training_newBlock">Nuevo Bloque %1$s</string>
    <string name="training_dialog_code">Introduce un código</string>
    <string name="training_dialog_import">Importar Bloque</string>
    <string name="training_dialog_share">Comparte "'%1$s'" con este código</string>
    <string name="training_dialog_copied">¡Copiado!</string>
    <string name="training_dialog_delete_title">Eliminar entrenamiento</string>
    <string name="training_dialog_delete_text">¿Estás seguro de que deseas eliminar "'%1$s'"?</string>


    <!--AddExerciseFragment-->
    <string name="addExercise_create_name">Nombre del ejercicio nuevo</string>
    <string name="addExercise_create_title">Crea un nuevo ejercicio</string>
    <string name="load_menu">Desplegar menú</string>
    <string name="addExercise_dialogRemove_title">ELIMINAR EJERCICIO</string>
    <string name="addExercise_dialogRemove_text">¿Estás seguro/a de que deseas eliminar "%1$s?"</string>

    <!--    Days of Week-->
    <string name="weekDay_Mon">Lun</string>
    <string name="weekDay_Tue">Mar</string>
    <string name="weekDay_Wed">Mié</string>
    <string name="weekDay_Thu">Jue</string>
    <string name="weekDay_Fri">Vie</string>
    <string name="weekDay_Sat">Sáb</string>
    <string name="weekDay_Sun">Dom</string>


</resources>