<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="225dp"
    android:layout_height="120dp"
    android:background="@color/background"
    app:cardCornerRadius="12dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAllWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/week_all"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tvAllExercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            app:layout_constraintBottom_toBottomOf="@id/tvAllWeek" />

        <TextView
            android:id="@+id/tvAllExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/week_objective"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tvAllObjective"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAllWeek" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            app:layout_constraintBottom_toBottomOf="@id/tvAllExercise" />

        <TextView
            android:id="@+id/tvAllObjective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/week_all_exercise"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAllExercise" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>